# libA

./: CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
src/: libA.cpp
